--- a/src/components/Tags/Tags.scss
+++ b/src/components/Tags/Tags.scss
@@ -2,4 +2,14 @@
     width: 300px;
     height: 180px;
     border: 2px solid blue;
+
+    .tag {
+        width: 90px;
+        height: 30px;
+        border: 2px solid pink; 
+
+        button {
+            margin-left: 5px;
+        }
+    }
 }
