--- a/src/components/CreateNote/CreateNote.scss
+++ b/src/components/CreateNote/CreateNote.scss
@@ -1,5 +1,48 @@
+// .wrapperCreateNote {
+//     width: 300px;
+//     height: 180px;
+//     border: 2px solid green;
+// }
+
 .wrapperCreateNote {
-    width: 300px;
-    height: 180px;
-    border: 2px solid green;
-}
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+  
+    textarea {
+      width: 100%;
+      height: 200px;
+      margin-bottom: 20px;
+      padding: 10px;
+      border: 1px solid #ccc;
+      font-size: 18px;
+      resize: none;
+  
+      &:focus {
+        outline: none;
+        border-color: #0066ff;
+      }
+    }
+  
+    button {
+      padding: 10px;
+      font-size: 16px;
+      border: none;
+      border-radius: 3px;
+      background-color: #0066ff;
+      color: #fff;
+      cursor: pointer;
+  
+      &:hover {
+        background-color: #0047b3;
+      }
+    }
+  
+    div {
+      margin-top: 10px;
+      font-size: 14px;
+      color: #666;
+    }
+  }
+  
