--- a/src/components/Tags/Tags.scss
+++ b/src/components/Tags/Tags.scss
@@ -1,17 +1,85 @@
+// .wrapperTags {
+//     width: 300px;
+//     height: 180px;
+//     border: 2px solid blue;
+
+//     .tag {
+//         width: 90px;
+//         height: 30px;
+//         border: 2px solid pink; 
+
+//         button {
+//             margin-left: 5px;
+//         }
+//     }
+// }
+
 .wrapperTags {
-    width: 300px;
-    height: 180px;
-    border: 2px solid blue;
-
-    .tag {
-        width: 90px;
-        height: 30px;
-        border: 2px solid pink; 
-
-        button {
-            margin-left: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  
+    div {
+      margin-bottom: 10px;
+  
+      &:first-child {
+        display: flex;
+        align-items: center;
+  
+        input[type='text'] {
+          margin-right: 10px;
+          padding: 5px;
+          font-size: 16px;
+          border: none;
+          border-radius: 3px;
+          background-color: #f2f2f2;
+  
+          &:focus {
+            outline: none;
+          }
         }
+  
+        button {
+          padding: 5px;
+          font-size: 16px;
+          border: none;
+          border-radius: 3px;
+          background-color: #4caf50;
+          color: #fff;
+          cursor: pointer;
+  
+          &:hover {
+            background-color: #3e8e41;
+          }
+        }
+      }
+  
+      .tag {
+        display: inline-flex;
+        align-items: center;
+        margin-right: 10px;
+        margin-bottom: 10px;
+        padding: 5px 10px;
+        font-size: 16px;
+        color: #fff;
+        background-color: #4caf50;
+        border-radius: 3px;
+  
+        button {
+          margin-left: 5px;
+          padding: 3px;
+          font-size: 14px;
+          color: #fff;
+          background-color: #e53935;
+          border: none;
+          border-radius: 50%;
+          cursor: pointer;
+  
+          &:hover {
+            background-color: #c62828;
+          }
+        }
+      }
     }
-}
-
+  }
   
