--- a/src/App.scss
+++ b/src/App.scss
@@ -1,33 +1,21 @@
 .app {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  
-    .firstBlock {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-  
-      .createNote {
-        margin-bottom: 1rem;
-      }
-  
-      .tags {
-        margin-bottom: 1rem;
-      }
-    }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #f2f5fb;
+  min-height: 100vh;
+  min-width: 375px;
 
-    .secondBlock {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-  
-    .notes {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin-top: 1rem;
+  .header {
+    width: 100%;
+    background-color: #004085;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    h2 {
+      margin: 20px 0;
+      color: white;
     }
   }
-  
+}
