--- a/src/components/Tags/Tags.scss
+++ b/src/components/Tags/Tags.scss
@@ -1,85 +1,123 @@
-// .wrapperTags {
-//     width: 300px;
-//     height: 180px;
-//     border: 2px solid blue;
-
-//     .tag {
-//         width: 90px;
-//         height: 30px;
-//         border: 2px solid pink; 
-
-//         button {
-//             margin-left: 5px;
-//         }
-//     }
-// }
-
 .wrapperTags {
+  width: 100%;
+  padding: 40px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #ffffff;
+
+  .tagsControls {
     display: flex;
-    flex-direction: column;
     align-items: center;
-  
-    div {
-      margin-bottom: 10px;
-  
-      &:first-child {
-        display: flex;
-        align-items: center;
-  
-        input[type='text'] {
-          margin-right: 10px;
-          padding: 5px;
-          font-size: 16px;
-          border: none;
-          border-radius: 3px;
-          background-color: #f2f2f2;
-  
-          &:focus {
-            outline: none;
-          }
-        }
-  
-        button {
-          padding: 5px;
-          font-size: 16px;
-          border: none;
-          border-radius: 3px;
-          background-color: #4caf50;
-          color: #fff;
-          cursor: pointer;
-  
-          &:hover {
-            background-color: #3e8e41;
-          }
-        }
+
+    input[type="text"] {
+      margin-right: 10px;
+      padding: 10px;
+      font-size: 16px;
+      border: none;
+      border-radius: 3px;
+      background-color: #f2f2f2;
+
+      &:focus {
+        outline: none;
       }
-  
-      .tag {
-        display: inline-flex;
-        align-items: center;
-        margin-right: 10px;
-        margin-bottom: 10px;
-        padding: 5px 10px;
-        font-size: 16px;
-        color: #fff;
-        background-color: #4caf50;
-        border-radius: 3px;
-  
-        button {
-          margin-left: 5px;
-          padding: 3px;
-          font-size: 14px;
-          color: #fff;
-          background-color: #e53935;
-          border: none;
-          border-radius: 50%;
-          cursor: pointer;
-  
-          &:hover {
-            background-color: #c62828;
-          }
+    }
+
+    button {
+      padding: 10px;
+      font-size: 16px;
+      font-weight: 500;
+      border: none;
+      border-radius: 5px;
+      background-color: #4caf50;
+      color: #fff;
+      cursor: pointer;
+
+      &:hover {
+        background-color: #3e8e41;
+      }
+    }
+  }
+  .tagsAll {
+    max-width: 1200px;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 20px;
+
+    .tag {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-right: 5px;
+      padding: 5px;
+      border-radius: 10px;
+      background-color: #dff8e0;
+      cursor: pointer;
+
+      &:hover {
+        opacity: 0.9;
+      }
+
+      &.all {
+        width: 50px;
+      }
+
+      &.active {
+        background-color: #eb2f52;
+        color: white;
+      }
+
+      button {
+        border: none;
+        margin-left: 4px;
+        border-radius: 50%;
+        cursor: pointer;
+        background-color: transparent;
+
+        &:hover {
+          color: green;
         }
       }
     }
   }
-  
+
+  // div {
+  //   margin-bottom: 10px;
+
+  //   .tag {
+  //     display: inline-flex;
+  //     align-items: center;
+  //     margin-right: 10px;
+  //     margin-bottom: 10px;
+  //     padding: 5px 10px;
+  //     font-size: 16px;
+  //     color: #fff;
+  //     background-color: #4caf50;
+  //     border-radius: 3px;
+  //     cursor: pointer;
+
+  //     &.active {
+  //       background-color: #4c77af;
+  //     }
+
+  //     &:hover {
+  //       opacity: 0.7;
+  //     }
+
+  //     button {
+  //       margin-left: 5px;
+  //       padding: 3px;
+  //       font-size: 14px;
+  //       color: #fff;
+  //       background-color: #e53935;
+  //       border: none;
+  //       border-radius: 50%;
+  //       cursor: pointer;
+
+  //       &:hover {
+  //         background-color: #c62828;
+  //       }
+  //     }
+  //   }
+  // }
+}
