--- a/src/components/CreateNote/CreateNote.scss
+++ b/src/components/CreateNote/CreateNote.scss
@@ -16,23 +16,21 @@
     .textBlock {
       padding: 10px;
 
-      textarea {
-        font-size: 16px;
-        color: #0b1329;
-        height: 70px;
-        padding: 15px 55px 15px 15px;
-        border: none;
-        border-radius: 4px 0px 0px 4px;
-        background-color: #ffffff;
-        outline: none;
-        resize: vertical;
-        width: 500px;
-        font-size: 16px;
+    .DraftEditor-root {
+      width: 600px;
+      height: 130px;
+      padding: 12px 20px;
+      box-sizing: border-box;
+      border: 2px solid #ccc;
+      border-radius: 4px;
+      background-color: #f8f8f8;
+      resize: none;
 
-        @media (max-width: 640px) {
-          width: 300px;
-        }
+      @media (max-width: 640px) {
+        width: 300px;
       }
+    }
+
       .tags {
         width: 100%;
         display: flex;
