--- a/src/components/CreateNote/CreateNote.scss
+++ b/src/components/CreateNote/CreateNote.scss
@@ -25,6 +25,7 @@
       border-radius: 4px;
       background-color: #f8f8f8;
       resize: none;
+      overflow-y: scroll;
 
       .public-DraftEditorPlaceholder-root {
         display: none;
